Fixing long messages overflowing

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -125,6 +125,10 @@ form button {
     border-bottom: 1px solid #e0e0e0;
 }
 
+.message-content {
+    word-break: break-word;
+}
+
 .timestamp {
     font-size: 0.75em;
     color: #919191;
